--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,7 +54,8 @@
 
       <div class="row banner">
          <div class="banner-text">
-            <h1 class="responsive-headline">Hi, I'm Luis</h1>
+            <h1 class="responsive-headline">Welcome to my Domain</h1>
+              <h2 class="responsive-headline">(Literally)</h2>
 
             <p>and this page has been viewed <a id="counter"></a> times :) </p>
             <ul class="social">
